--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -421,7 +421,7 @@ ul.list-inline{margin-top:0;margin-bottom:30px}
         width: 175px;
     }
 }
-video {
+iframe {
     box-shadow:0px 0 20px 5px #007D37;
     border-radius: 10px
 }
